commented to auto generate scaffold sources

--- a/app/views/entries/edit.html.erb
+++ b/app/views/entries/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Entry</h1>
 
-<%= render 'form' %>
+<%= render 'form' %> <%# renderメソッド form の読み込み%>
 
-<%= link_to 'Show', @entry %> |
-<%= link_to 'Back', entries_path %>
+<%= link_to 'Show', @entry %> | <%# link_to メソッド 詳細表示のURL取得%>
+<%= link_to 'Back', entries_path %> <%# link_to メソッド 一覧表示のURL取得%>
