--- a/app/views/entries/_form.html.erb
+++ b/app/views/entries/_form.html.erb
@@ -1,10 +1,11 @@
-<%= form_for(@entry) do |f| %>
-  <% if @entry.errors.any? %>
+<%= form_for(@entry) do |f| %> <%# from_for メソッド オブジェクトに対して適切なformタグを生成%>
+  <% if @entry.errors.any? %> <%# もしエラーがあったら%>
     <div id="error_explanation">
       <h2><%= pluralize(@entry.errors.count, "error") %> prohibited this entry from being saved:</h2>
+      <%# pluralize は単数と複数の変換。エラー数に応じて errorなのかerrors にするのか%>
 
       <ul>
-      <% @entry.errors.full_messages.each do |message| %>
+      <% @entry.errors.full_messages.each do |message| %> <%# エラーメッセージのループ%>
         <li><%= message %></li>
       <% end %>
       </ul>
@@ -12,14 +13,14 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.label :title %><br> <%# label メソッド タイトルシンボル%>
+    <%= f.text_field :title %> <%# text_field メソッド タイトルシンボル%>
   </div>
   <div class="field">
-    <%= f.label :body %><br>
-    <%= f.text_area :body %>
+    <%= f.label :body %><br> <%# label メソッド body シンボル%>
+    <%= f.text_area :body %> <%# text_area メソッド body シンボル%>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit %> <%# submit メソッド 適切なsubmitボタンを表示%>
   </div>
 <% end %>
