--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Entry</h1>
 
-<%= render 'form' %>
+<%= render 'form' %> <%# renderメソッド form の読み込み%>
 
-<%= link_to 'Back', entries_path %>
+<%= link_to 'Back', entries_path %>　<%# link_to メソッド 一覧画面へのリンク%>
